<resources>
    <string name="app_name">SchoolSchedule</string>

    <string name="base_url">http://192.168.1.147:3000/api/</string>
    <!--<string name="base_url">http://77.47.190.101:3000/api/</string>-->
    <!--<string name="base_url">http://192.168.0.70:3000/api/</string>-->
    <string name="shared_preferences_key">com.dmt.max.schoolschedule.sharedpreferences</string>
    <string name="access_token_key">com.dmt.max.schoolschedule.accesstoken</string>
    <string name="refresh_token_key">com.dmt.max.schoolschedule.refreshtoken</string>

    <string name="pupils">Pupils</string>
    <string name="groups">Groups</string>
    <string name="teachers">Teachers</string>
    <string name="lessons">Lessons</string>
    <string name="schedule_cells">Schedule Cell</string>

    <string name="loading_pupils">Loading pupils...</string>

    <string name="pupilId">pupil_id</string>
    <string name="groupId">group_id</string>
    <string name="teacherId">teacher_id</string>
    <string name="lessonId">lesson_id</string>
    <string name="scheduleCellId">schedule-cell_id</string>

    <string name="add">Add</string>
    <string name="update">Update</string>

    <string name="resolve_web_service_error">Can not resolve web service</string>

    <string-array name="subjects">
        <item>Math</item>
        <item>English</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Biology</item>
    </string-array>

    <string-array name="dayOfTheWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
